# rag-doc-qa

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
api/: main.py
app/: streamlit_app.py
docs/: sample.txt
eval/: evaluate.py  sample_dataset.json
rag/: __init__.py  config.py  generation.py  ingestion.py  pipeline.py  retrieval.py
tests/: test_chunking.py  test_pipeline.py  test_retrieval.py
